k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wkhtmltopdf-deploy
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    spec:
      containers:
      - name: app
        image: ghcr.io/dmp593/wkhtmltopdf:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.2"
            memory: 150Mi
          limits:
            cpu: "0.5"
            memory: 400Mi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /help
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8080
      restartPolicy: Always
