k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wkhtmltopdf-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
