k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wkhtmltopdf-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  rules:
    - host: wkhtmltopdf.setwin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wkhtmltopdf-svc
                port:
                  number: 80
